# Word2Vec_Server

./: Cargo.toml
src/: main.rs
src/middleware/: timer.rs
src/wordvecs/: mod.rs  vectordict.rs
